--- a/src/app/admin/components/dashboard/dashboard.component.html
+++ b/src/app/admin/components/dashboard/dashboard.component.html
@@ -1,6 +1,4 @@
 <p>dashboard works!</p>
 
  <button (click)="m()">Test</button>
- <!-- //Test -->
-  <!-- //Test -->
-   <!-- //Test -->
+ <!-- //develop -->
