NgxSpinner Eklendi. BaseComponent classı üzerinden extend edilen sayfalarda kullanılabilecek.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,3 +38,8 @@
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
 </footer>
+
+<ngx-spinner name="s1" type="timer"></ngx-spinner>
+<ngx-spinner name="s2" type="ball-pulse"></ngx-spinner>
+<ngx-spinner name="s3" type="square-jelly-box"></ngx-spinner>
+
