--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -25,6 +25,14 @@
             <th mat-header-cell *matHeaderCellDef> Updated Date </th>
             <td mat-cell *matCellDef="let element"> {{element.updatedDate}} </td>
         </ng-container>
+        <ng-container matColumnDef="edit">
+            <th mat-header-cell *matHeaderCellDef width="10"> </th>
+            <td mat-cell *matCellDef="let element"> <img src="assets/edit.png"> </td>
+        </ng-container>
+        <ng-container matColumnDef="delete">
+            <th mat-header-cell *matHeaderCellDef width="30"> </th>
+            <td [id]="element.id" mat-cell *matCellDef="let element" appDelete (outputData)="getProducts()"><!-- <img src="assets/delete.png" (click)="delete(element.id,$event)">--> </td>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
