--- a/src/app/admin/components/products/list/list.component.html
+++ b/src/app/admin/components/products/list/list.component.html
@@ -31,11 +31,7 @@
         </ng-container>
         <ng-container matColumnDef="delete">
             <th mat-header-cell *matHeaderCellDef width="30"> </th>
-            <td  mat-cell *matCellDef="let element" 
-            appDelete 
-            (outputData)="getProducts()"
-            [id]="element.id" 
-            controller="products"></td>
+            <td [id]="element.id" mat-cell *matCellDef="let element" appDelete (outputData)="getProducts()"><!-- <img src="assets/delete.png" (click)="delete(element.id,$event)">--> </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
